# ShortVideo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mlingdu/shortvideo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mlingdu/shortvideo/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/mlingdu/shortvideo/: ExampleUnitTest.java
shortvideolib/: build.gradle
shortvideolib/src/main/: AndroidManifest.xml
shortvideolib/src/main/cpp/: CMakeLists.txt
shortvideolib/src/main/cpp/VideoEngine/: CMakeLists.txt
shortvideolib/src/main/cpp/VideoEngine/android/: ChangbaRecordingPreviewScheduler.cpp  MusicDecoder.cpp  NativeRecordProcessor.cpp  VideoStudio.cpp  com_mlingdu_demo_Videostudio.h  com_mlingdu_demo_decoder_MusicDecoder.h  com_mlingdu_demo_recorder_NativeRecordProcessor.h  com_mlingdu_demo_recording_camera_preview_ChangbaRecordingPreviewScheduler.h
shortvideolib/src/main/cpp/VideoEngine/camera_preview/: mv_recording_preview_controller.cpp  mv_recording_preview_controller.h
shortvideolib/src/main/cpp/VideoEngine/livecore/common/: publisher_statistics.cpp  publisher_statistics.h
shortvideolib/src/main/cpp/VideoEngine/livecore/consumer/: video_consumer_thread.cpp  video_consumer_thread.h
shortvideolib/src/main/cpp/VideoEngine/livecore/publisher/: recording_publisher.cpp  recording_publisher.h
shortvideolib/src/main/cpp/VideoEngine/video_consumer/libvideo_consumer/: video_packet_consumer.cpp
shortvideolib/src/main/java/com/mlingdu/demo/: PacketBufferTimeEnum.java  Songstudio.java  Videostudio.java
shortvideolib/src/main/java/com/mlingdu/demo/activity/: MagicCameraActivity.java  MainActivity.java  SongSelectionActivity.java  VideoRecorderActivity.java
shortvideolib/src/main/java/com/mlingdu/demo/decoder/: Mp3Decoder.java  MusicDecoder.java
shortvideolib/src/main/java/com/mlingdu/demo/entity/: AspectRatio.java  CalculateType.java  GalleryType.java  Music.java  RecordItem.java  ScaleType.java  Song.java
shortvideolib/src/main/java/com/mlingdu/demo/fragment/: MusicSelectFragment.java
shortvideolib/src/main/java/com/mlingdu/demo/loader/: MediaLoader.java
shortvideolib/src/main/java/com/mlingdu/demo/loader/impl/: GlideMediaLoader.java
shortvideolib/src/main/java/com/mlingdu/demo/player/accompany/: NativeMp3Player.java
shortvideolib/src/main/java/com/mlingdu/demo/recorder/: NativeRecordProcessor.java  OnRecordListener.java  RecordProcessor.java  RecordTimer.java
shortvideolib/src/main/java/com/mlingdu/demo/recording/: RecordingImplType.java
shortvideolib/src/main/java/com/mlingdu/demo/recording/camera/exception/: CameraParamSettingException.java
shortvideolib/src/main/java/com/mlingdu/demo/recording/camera/preview/: CameraConfigInfo.java  PreviewFilterType.java  RecordingPreviewScheduler.java  VideoCamera.java  (+1 more)
shortvideolib/src/main/java/com/mlingdu/demo/recording/exception/: AudioConfigurationException.java  InitConsumerThreadFailException.java  InitLivePublisherFailException.java  InitPlayerFailException.java  InitRecorderFailException.java  RecordingStudioException.java  RecordingStudioNullArgumentException.java  StartRecordingException.java
shortvideolib/src/main/java/com/mlingdu/demo/recording/service/: AbstractPlayerServiceImpl.java  PlayerService.java  RecorderService.java
shortvideolib/src/main/java/com/mlingdu/demo/recording/video/: CommonVideoRecordingStudio.java  VideoRecordingStudio.java
shortvideolib/src/main/java/com/mlingdu/demo/scanner/: LocalMusicCursorLoader.java  LocalMusicScanner.java
shortvideolib/src/main/java/com/mlingdu/demo/util/: Base64.java  BitmapUtils.java  DesEncode.java  FilePathUtil.java  FileUtils.java  PathConstraints.java  PermissionUtils.java  StringUtil.java  StringUtils.java
shortvideolib/src/main/java/com/mlingdu/demo/video/encoder/: H264ParseUtil.java  HWEncoderServerBlackListHelper.java  MediaCodecEncoderLifeCycle.java  MediaCodecMemoryEncoder.java  MediaCodecSurfaceEncoder.java
shortvideolib/src/main/java/com/mlingdu/demo/widget/: AlwaysMarqueeTextView.java  CameraShutterButton.java  HorizontalIndicatorView.java
shortvideolib/src/main/res/layout/: activity_magic_camera.xml  activity_main.xml  camera_bottom.xml  camera_top.xml  fragment_camera_filter.xml  fragment_camera_record.xml  record_video_surfaceview_filter_activity.xml  song_selection_layout.xml
shortvideolib/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
(+7 files in other folders)
